java 优化